# formalizer

./: .aiignore  .gitignore  CONTRIBUTING.md  DESIGN.md  FORUM_POST.md  README.md  pyproject.toml
.github/workflows/: publish.yml
designs/: GAPS.md  PROJECT.md  RENDERING_ENGINE.md
designs/reference/example/: af4141-fillable.pdf.json
formalizer-engine/: README.md  lib.typ  typst.toml
formalizer-engine/example/: FIELDS.json
formalizer-engine/tests/: test_render.py
src/formalizer/: __init__.py  _generate.py  cli.py  codegen.py  extract.py
tests/: conftest.py  test_cli.py  test_codegen.py  test_extract.py  test_generate.py  test_pdf_size.py
