[project]
name = "formalizer"
version = "0.1.0"
description = "Orchestrate end-to-end reproduction of fillable PDF forms as self-contained Typst packages."
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "nibsbin" }]
dependencies = [
    "pymupdf>=1.27.0",
]

[project.scripts]
formalizer = "formalizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formalizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
