[project]
name = "formalizer"
version = "0.1.1"
description = "Orchestrate end-to-end reproduction of fillable PDF forms as self-contained Typst packages."
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "nibsbin" }]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/nibsbin/formalizer",
dependencies = ["pymupdf>=1.27.0"]

[project.scripts]
formalizer = "formalizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formalizer"]

[tool.hatch.build.targets.wheel.force-include]
"formalizer-engine/lib.typ" = "formalizer/resources/lib.typ"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=9.0.2"]
